--- a/package.json
+++ b/package.json
@@ -13,16 +13,19 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.5",
     "@mui/styled-engine": "^5.13.2",
+    "@react-three/fiber": "^8.13.7",
     "@types/node": "20.4.9",
     "@types/react": "18.2.19",
     "@types/react-dom": "18.2.7",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.13",
     "framer-motion": "^10.15.2",
+    "framer-motion-3d": "^10.16.0",
     "next": "^13.4.13",
+    "prettier": "^3.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-pageflip": "^2.0.3",
+    "three": "^0.155.0",
     "typescript": "5.1.6"
   }
 }
