--- a/package.json
+++ b/package.json
@@ -6,26 +6,27 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --check --ignore-path .gitignore .",
+    "format:fix": "prettier --write --ignore-path .gitignore ."
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.14.5",
-    "@mui/styled-engine": "^5.13.2",
-    "@react-three/fiber": "^8.13.7",
     "@types/node": "20.4.9",
     "@types/react": "18.2.19",
     "@types/react-dom": "18.2.7",
-    "eslint": "8.46.0",
-    "eslint-config-next": "13.4.13",
+    "@types/react-select": "^5.0.1",
     "framer-motion": "^10.15.2",
-    "framer-motion-3d": "^10.16.0",
     "next": "^13.4.13",
-    "prettier": "^3.0.2",
+    "prisma": "^5.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "three": "^0.155.0",
+    "react-select": "^5.7.4",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "eslint": "8.46.0",
+    "eslint-config-next": "13.4.13",
+    "eslint-config-prettier": "^9.0.0",
+    "prettier": "^3.0.2"
   }
 }
