--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,8 @@
     "@types/react-dom": "18.2.7",
     "@types/react-select": "^5.0.1",
     "framer-motion": "^10.15.2",
-    "next": "^13.4.13",
+    "next": "^13.5.1",
+    "openai": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.1",
@@ -25,7 +26,7 @@
   },
   "devDependencies": {
     "eslint": "8.46.0",
-    "eslint-config-next": "13.4.13",
+    "eslint-config-next": "^13.5.1",
     "eslint-config-prettier": "^9.0.0",
     "prettier": "^3.0.2"
   }
